--- a/dpc/Cargo.toml
+++ b/dpc/Cargo.toml
@@ -128,6 +128,5 @@ default = [
 ]
 wasm = [ "full", "snarkvm-algorithms/wasm", "snarkvm-gadgets/full" ]
 print-trace = [ "snarkvm-profiler/print-trace" ]
-full = [ "testnet1", "testnet2" ]
-testnet1 = [ "snarkvm-r1cs" ]
+full = [ "testnet2" ]
 testnet2 = [ "snarkvm-r1cs" ]
